--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Viajes</title>
-    <link rel="stylesheet" href="./main.css">
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+
+    <header>
+        <h1>PRÁCTICA DOM</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Bienvenidos</h2>
+            <div id="bienvenidos"></div>
+        </section>
+
+        <section>
+            <h2>Recomendados</h2>
+            <div id="recomendados"></div>
+        </section>
+
+        <section>
+            <h2>Destinos</h2>
+            <div id="destinos"></div>
+        </section>
+    </main>
+
+    <script src="./scripts.js"></script>
 </body>
 </html>
