--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
     <main>
         <section>
             <h2>Bienvenidos</h2>
-            <div id="bienvenidos"></div>
+            <div id="bienvenidos">
+
+            </div>
         </section>
 
         <section>
             <h2>Recomendados</h2>
-            <div id="recomendados"></div>
+            <div id="recomendados">
+                
+            </div>
         </section>
 
         <section>
             <h2>Destinos</h2>
-            <div id="destinos"></div>
+            <div id="destinos">
+
+            </div>
         </section>
     </main>
+
+    <footer>
+       <h4>FOOTER</h4> 
+    </footer>
 
     <script src="./scripts.js"></script>
 </body>
